--- a/about-style.css
+++ b/about-style.css
@@ -38,6 +38,9 @@ p {
   font-size: 1.5rem;
   text-align: center;
   margin-bottom: 2rem;
+  max-width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* styles for the menu under the description */
 .menu a.active {
