--- a/contact-style.css
+++ b/contact-style.css
@@ -210,3 +210,16 @@ textarea {
       outline: none;
     }
     
+    .social-icon {
+      width: 30px;
+      height: 30px;
+      margin: 0 10px;
+      margin-top: 50px;
+
+    }
+    footer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
